--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
   carousel_slider: ^5.0.0
+  url_launcher: ^6.3.0
+  # url_launcher_web: ^2.3.3
 
 
 dev_dependencies:
